changed logs and activities to a dedicated view
